tests/tokenizer/invalid_string_literal.err.out
tests/tokenizer/invalid_string_literal.err.ri:1:1: error: unfinished string literal
      | 
    1 | "unfinished string literal
      | ^                         
error: could not compile `invalid_string_literal` module, aborting due to previous error